--- a/src/app/pages/product-inventory/inventory-items/inventory-products/inventory-products.component.html
+++ b/src/app/pages/product-inventory/inventory-items/inventory-products/inventory-products.component.html
@@ -48,7 +48,7 @@
                             class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
         
                         <label for="created" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
-                            Created
+                            {{ 'PRODUCT_INVENTORY._created' | translate }}
                         </label>
                         </li>
         
@@ -57,7 +57,7 @@
                             class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
         
                         <label for="active" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
-                            Active
+                            {{ 'PRODUCT_INVENTORY._active' | translate }}
                         </label>
                         </li>
         
@@ -66,7 +66,7 @@
                             class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
         
                         <label for="suspended" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
-                            Suspended
+                            {{ 'PRODUCT_INVENTORY._suspended' | translate }}
                         </label>
                         </li>
         
@@ -75,7 +75,7 @@
                             class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
         
                         <label for="terminated" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
-                            Terminated
+                            {{ 'PRODUCT_INVENTORY._terminated' | translate }}
                         </label>
                         </li>
                         
@@ -127,7 +127,7 @@
                                     <span class="sr-only">Unsubscribe</span>
                                 </button>
                                 <div id="unsubscribe-default" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 rounded-lg shadow-sm opacity-0 tooltip bg-primary-100">
-                                    Unsubscribe
+                                    {{ 'PRODUCT_INVENTORY._unsubscribe' | translate }}
                                     <div class="tooltip-arrow" data-popper-arrow></div>
                                 </div>
                                 }
@@ -334,7 +334,7 @@
                                 <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-secondary-200 dark:text-white">
                                     <tr>
                                         <th scope="col" class="px-6 py-3">
-                                            Id
+                                            {{ 'PRODUCT_INVENTORY._id' | translate }}
                                         </th>
                                         <th scope="col" class="px-6 py-3">
                                             {{ 'OFFERINGS._name' | translate }}
@@ -383,7 +383,7 @@
                                 <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-secondary-200 dark:text-white">
                                     <tr>
                                         <th scope="col" class="px-6 py-3">
-                                            Id
+                                            {{ 'PRODUCT_INVENTORY._id' | translate }}
                                         </th>
                                         <th scope="col" class="px-6 py-3">
                                             {{ 'OFFERINGS._name' | translate }}
@@ -478,20 +478,20 @@
                   <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
                   </svg>
-                  <span class="sr-only">Close modal</span>
+                  <span class="sr-only">{{ 'PRODUCT_INVENTORY._close_modal' | translate }}</span>
               </button>
 
               <svg class="text-gray-400 dark:text-gray-500 w-12 h-12 mb-3.5 mx-auto" aria-hidden="true" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Zm7.707-3.707a1 1 0 0 0-1.414 1.414L10.586 12l-2.293 2.293a1 1 0 1 0 1.414 1.414L12 13.414l2.293 2.293a1 1 0 0 0 1.414-1.414L13.414 12l2.293-2.293a1 1 0 0 0-1.414-1.414L12 10.586 9.707 8.293Z" clip-rule="evenodd"/>
               </svg>                
               
-              <p class="mb-4 text-gray-500 dark:text-gray-300">Are you sure you want to cancel this subscription? ({{prodToUnsubscribe.product.name}})</p>
+              <p class="mb-4 text-gray-500 dark:text-gray-300">{{ 'PRODUCT_INVENTORY._cancel_sub' | translate }} ({{prodToUnsubscribe.product.name}})</p>
               <div class="flex justify-center items-center space-x-4">
                   <button (click)="unsubscribeModal=false;$event.stopPropagation();" type="button" class="py-2 px-3 text-sm font-medium text-gray-500 bg-white rounded-lg border border-gray-200 hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-primary-300 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">
-                      No, cancel
+                      {{ 'PRODUCT_INVENTORY._cancel' | translate }}
                   </button>
                   <button (click)="unsubscribeProduct(prodToUnsubscribe.id)" type="submit" class="py-2 px-3 text-sm font-medium text-center text-white bg-red-600 rounded-lg hover:bg-red-700 focus:ring-4 focus:outline-none focus:ring-red-300 dark:bg-red-500 dark:hover:bg-red-600 dark:focus:ring-red-900">
-                      Yes, I'm sure
+                    {{ 'PRODUCT_INVENTORY._yes_sure' | translate }}
                   </button>
               </div>
           </div>
@@ -508,19 +508,19 @@
           <div class="relative p-4 text-center bg-white rounded-lg shadow dark:bg-gray-800 sm:p-5">
               <button type="button" (click)="renewModal=false;$event.stopPropagation();" class="text-gray-400 absolute top-2.5 right-2.5 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white">
                   <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                  <span class="sr-only">Close modal</span>
+                  <span class="sr-only">{{ 'PRODUCT_INVENTORY._close_modal' | translate }}</span>
               </button>
               <svg class="text-gray-400 dark:text-gray-500 w-12 h-12 mb-3.5 mx-auto" aria-hidden="true" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m16 10 3-3m0 0-3-3m3 3H5v3m3 4-3 3m0 0 3 3m-3-3h14v-3"/>                    
               </svg>
               
-              <p class="mb-4 text-gray-500 dark:text-gray-300">Are you sure you want to renew this subscription? ({{prodToRenew.product.name}})</p>
+              <p class="mb-4 text-gray-500 dark:text-gray-300">{{ 'PRODUCT_INVENTORY._renew_sub' | translate }} ({{prodToRenew.product.name}})</p>
               <div class="flex justify-center items-center space-x-4">
                   <button (click)="renewModal=false;$event.stopPropagation();" type="button" class="py-2 px-3 text-sm font-medium text-gray-500 bg-white rounded-lg border border-gray-200 hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-primary-300 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">
-                      No, cancel
+                    {{ 'PRODUCT_INVENTORY._cancel' | translate }}
                   </button>
                   <button (click)="renewProduct(prodToRenew.id)" type="submit" class="py-2 px-3 text-sm font-medium text-center text-white bg-blue-600 rounded-lg hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-900">
-                      Yes, I'm sure
+                    {{ 'PRODUCT_INVENTORY._yes_sure' | translate }}
                   </button>
               </div>
           </div>
