--- a/src/app/pages/product-inventory/inventory-resources/inventory-resources.component.html
+++ b/src/app/pages/product-inventory/inventory-resources/inventory-resources.component.html
@@ -34,7 +34,7 @@
                           class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
           
                       <label for="standby" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-200">
-                        Standby
+                        {{ 'PRODUCT_INVENTORY._standby' | translate }}
                       </label>
                       </li>
           
@@ -43,7 +43,7 @@
                           class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
           
                       <label for="alarm" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-200">
-                        Alarm
+                        {{ 'PRODUCT_INVENTORY._alarm' | translate }}
                       </label>
                       </li>
           
@@ -52,7 +52,7 @@
                           class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
           
                       <label for="available" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-200">
-                        Available
+                        {{ 'PRODUCT_INVENTORY._available' | translate }}
                       </label>
                       </li>
       
@@ -61,7 +61,7 @@
                             class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
             
                         <label for="reserved" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-200">
-                            Reserved
+                            {{ 'PRODUCT_INVENTORY._reserved' | translate }}
                         </label>
                       </li>
 
@@ -70,7 +70,7 @@
                             class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
             
                         <label for="suspended" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-200">
-                            Suspended
+                            {{ 'PRODUCT_INVENTORY._suspended' | translate }}
                         </label>
                       </li>
 
@@ -79,7 +79,7 @@
                             class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
             
                         <label for="unknown" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-200">
-                            Unknown
+                            {{ 'PRODUCT_INVENTORY._unknown' | translate }}
                         </label>
                       </li>
                       
@@ -131,7 +131,7 @@
                         <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-secondary-200 dark:text-white">
                             <tr>
                                 <th scope="col" class="px-6 py-3">
-                                    Id
+                                    {{ 'PRODUCT_INVENTORY._id' | translate }}
                                 </th>
                                 <th scope="col" class="px-6 py-3">
                                     {{ 'OFFERINGS._name' | translate }}
