--- a/src/app/pages/product-inventory/inventory-services/inventory-services.component.html
+++ b/src/app/pages/product-inventory/inventory-services/inventory-services.component.html
@@ -34,7 +34,7 @@
                               class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
               
                           <label for="feasibilityChecked" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-200">
-                            Feasibility Checked
+                            {{ 'PRODUCT_INVENTORY._feasibility' | translate }}
                           </label>
                           </li>
               
@@ -43,7 +43,7 @@
                               class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
               
                           <label for="designed" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-200">
-                            Designed
+                            {{ 'PRODUCT_INVENTORY._designed' | translate }}
                           </label>
                           </li>
           
@@ -52,7 +52,7 @@
                                 class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
                 
                             <label for="reserved" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-200">
-                                Reserved
+                                {{ 'PRODUCT_INVENTORY._reserved' | translate }}
                             </label>
                           </li>
     
@@ -61,7 +61,7 @@
                                 class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
                 
                             <label for="inactive" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-200">
-                                Inactive
+                                {{ 'PRODUCT_INVENTORY._inactive' | translate }}
                             </label>
                           </li>
 
@@ -70,7 +70,7 @@
                                 class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
                 
                             <label for="active" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-200">
-                                Active
+                                {{ 'PRODUCT_INVENTORY._active' | translate }}
                             </label>
                           </li>
 
@@ -79,7 +79,7 @@
                                 class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500" />
                 
                             <label for="terminated" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-200">
-                                Terminated
+                                {{ 'PRODUCT_INVENTORY._terminated' | translate }}
                             </label>
                           </li>
                           
@@ -131,7 +131,7 @@
                         <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-secondary-200 dark:text-white">
                             <tr>
                                 <th scope="col" class="px-6 py-3">
-                                    Id
+                                    {{ 'PRODUCT_INVENTORY._id' | translate }}
                                 </th>
                                 <th scope="col" class="px-6 py-3">
                                     {{ 'OFFERINGS._name' | translate }}
