--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
@@ -168,14 +168,14 @@
                                             <svg class="w-6 h-6 text-blue-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
                                             </svg>                                     
-                                            Active
+                                            {{ 'UPDATE_PROD_SPEC._active' | translate }}
                                         </span>
                                     </li>
                                 }@else{
                                     <li (click)="setProdStatus('Active')"
                                     class="cursor-pointer flex w-fit md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">                                    
-                                            Active
+                                            {{ 'UPDATE_PROD_SPEC._active' | translate }}
                                         </span>
                                     </li>
                                 }
@@ -186,14 +186,14 @@
                                             <svg class="w-6 h-6 text-green-700" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
                                             </svg>                                          
-                                            Launched
+                                            {{ 'UPDATE_PROD_SPEC._launched' | translate }}
                                         </span>
                                     </li>
                                 }@else{
                                     <li (click)="setProdStatus('Launched')"
                                     class="cursor-pointer flex w-fit md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">                                         
-                                            Launched
+                                            {{ 'UPDATE_PROD_SPEC._launched' | translate }}
                                         </span>
                                     </li>
                                 }
@@ -204,14 +204,14 @@
                                             <svg class="w-6 h-6 text-yellow-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
                                             </svg>                                          
-                                            Retired
+                                            {{ 'UPDATE_PROD_SPEC._retired' | translate }}
                                         </span>
                                     </li>
                                 }@else{
                                     <li (click)="setProdStatus('Retired')"
                                     class="cursor-pointer flex w-fit md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:mx-2 md:after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">                                        
-                                            Retired
+                                            {{ 'UPDATE_PROD_SPEC._retired' | translate }}
                                         </span>
                                     </li>
                                 }
@@ -221,13 +221,13 @@
                                             <svg class="w-6 h-6 text-red-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
                                             </svg>                                          
-                                            Obsolete
+                                            {{ 'UPDATE_PROD_SPEC._obsolete' | translate }}
                                         </span>
                                     </li>
                                 }@else{
                                     <li (click)="setProdStatus('Obsolete')" class="cursor-pointer flex items-center">
                                         <span class="flex items-center">                                        
-                                            Obsolete
+                                            {{ 'UPDATE_PROD_SPEC._obsolete' | translate }}
                                         </span>
                                     </li>
                                 }
@@ -367,7 +367,7 @@
                 @if(showCompliance){
                     <h2 class="text-3xl font-bold text-primary-100 ml-4 dark:text-white">{{ 'UPDATE_PROD_SPEC._comp_profile' | translate }}</h2>
                     <h3 class="font-bold text-primary-100 dark:text-primary-50 text-left ml-4">
-                        Self Attestation:
+                        {{ 'UPDATE_PROD_SPEC._self_attestation' | translate }}
                     </h3>
                     <div class="flex items-center justify-between ml-4 border border-1 p-2 rounded-lg shadow bg-white dark:bg-secondary-200 shadow-md">
 
@@ -1212,7 +1212,7 @@
                                                 {{ 'UPDATE_PROD_SPEC._product_name' | translate }}
                                             </th>
                                             <th scope="col" class="px-6 py-3">
-                                                Actions
+                                                {{ 'UPDATE_PROD_SPEC._actions' | translate }}
                                             </th>
                                         </tr>
                                     </thead>
@@ -1641,15 +1641,15 @@
                     <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
                     </svg>
-                    <span class="sr-only">Close modal</span>
+                    <span class="sr-only">{{ 'UPDATE_PROD_SPEC._close_modal' | translate }}</span>
                 </button>
                 <ngx-file-drop class="m-4 p-4" dropZoneLabel="Drop files here" (onFileDrop)="dropped($event,selectedISO)" (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
                     <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
                         <svg class="w-12 h-12 text-primary-100 mx-auto" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h3a3 3 0 0 0 0-6h-.025a5.56 5.56 0 0 0 .025-.5A5.5 5.5 0 0 0 7.207 9.021C7.137 9.017 7.071 9 7 9a4 4 0 1 0 0 8h2.167M12 19v-9m0 0-2 2m2-2 2 2"/>
                         </svg>                        
-                        <p class="text-gray-500 mr-4">Drop files to attatch or 
-                            <button (click)="openFileSelector()" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">select a file.</button>
+                        <p class="text-gray-500 mr-4">{{ 'UPDATE_PROD_SPEC._drop_files' | translate }}
+                            <button (click)="openFileSelector()" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">{{ 'UPDATE_PROD_SPEC._select_files' | translate }}</button>
                         </p>                       
                     </ng-template>
                 </ngx-file-drop>  
@@ -1657,10 +1657,10 @@
               
                 <div class="flex justify-center items-center space-x-4">
                     <button (click)="showUploadFile=false;$event.stopPropagation();" type="button" class="py-2 px-3 text-sm font-medium text-gray-500 bg-white rounded-lg border border-gray-200 hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-primary-300 hover:text-gray-900 focus:z-10">
-                        Cancel
+                        {{ 'UPDATE_PROD_SPEC._cancel' | translate }}
                     </button>
                     <button (click)="uploadFile()" type="submit" class="py-2 px-3 text-sm font-medium text-center text-white bg-primary-100 hover:bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-primary-50">
-                        Upload
+                        {{ 'UPDATE_PROD_SPEC._upload' | translate }}
                     </button>
                 </div>
             </div>
