--- a/src/app/pages/contact-us/contact-us-form.component.html
+++ b/src/app/pages/contact-us/contact-us-form.component.html
@@ -5,8 +5,8 @@
         <div class="pt-8 pb-32 px-4 w-full text-left lg:pt-16 lg:px-12 bg-cover bg-right-bottom items-center justify-between" style="background-image: url(assets/images/bg_1_shadow.png)">
             <div class="flex flex-row mx-auto max-w-screen-xl">
                 <div class="flex flex-col">
-                    <h1 class="mb-4 text-left text-4xl font-extrabold tracking-tight md:text-5xl lg:text-6xl text-secondary-50">Let's get in touch</h1>
-                    <p class="text-left text-lg font-normal lg:text-xl text-secondary-50">We are glad you are interested in the DOME Marketplace! Please share your questions or thoughts with us and we'll get back to you shortly.</p>
+                    <h1 class="mb-4 text-left text-4xl font-extrabold tracking-tight md:text-5xl lg:text-6xl text-secondary-50">{{ 'CONTACTUS._title' | translate }}</h1>
+                    <p class="text-left text-lg font-normal lg:text-xl text-secondary-50">{{ 'CONTACTUS._subtitle' | translate }}</p>
                 
                 </div>
                 <div class="w-full">
@@ -16,112 +16,111 @@
         </div>
     </section>
     <form [formGroup]="contactForm" class="relative -top-20 items-center mx-auto max-w-screen-xl w-full items-center bg-secondary-50 dark:bg-secondary-100 rounded-lg shadow-lg p-8">
-        <h2 class="text-left text-2xl mb-2 font-bold dark:text-white">Please fill in this form to contact us</h2>
+        <h2 class="text-left text-2xl mb-2 font-bold dark:text-white">{{ 'CONTACTUS._fill' | translate }}</h2>
         <div class="grid grid-cols-3 gap-4">
             <div>
-                <label for="email" class="font-bold text-lg dark:text-white">Email</label>
+                <label for="email" class="font-bold text-lg dark:text-white">{{ 'CONTACTUS._email' | translate }}</label>
                 <input formControlName="email" type="text" id="email"
                 [ngClass]="contactForm.get('email')?.touched && contactForm.get('email')?.invalid
                 ? 'border-red-600'
                 : 'border-gray-300 dark:border-secondary-200'"  
                 class="mb-2 bg-gray-50 dark:bg-secondary-300 border dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                 @if(contactForm.get('email')?.invalid && contactForm.get('email')?.errors?.['maxlength']){
-                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">Email is too long. Must be less than 320 characters.</span></p>
+                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">{{ 'CONTACTUS._emaillong' | translate }}</span></p>
                 }
                 @if(contactForm.get('email')?.invalid && contactForm.get('email')?.errors?.['pattern']){
-                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">Email must follow the following format: example&#64;example.example</span></p>
+                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">{{ 'CONTACTUS._emailpattern' | translate }}</span></p>
                 }
                 @if(contactForm.get('email')?.touched && contactForm.get('email')?.hasError('required')){
-                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">This field is mandatory.</span></p>
+                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">{{ 'CONTACTUS._mandatory' | translate }}</span></p>
                 }
             </div>
             <div>
-                <label for="name" class="font-bold text-lg dark:text-white">First name</label>
+                <label for="name" class="font-bold text-lg dark:text-white">{{ 'CONTACTUS._firstname' | translate }}</label>
                 <input formControlName="name" type="text" id="name"
                 [ngClass]="contactForm.get('name')?.touched && contactForm.get('name')?.invalid
                 ? 'border-red-600'
                 : 'border-gray-300 dark:border-secondary-200'"  
                 class="mb-2 bg-gray-50 dark:bg-secondary-300 border dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />        
                 @if(contactForm.get('name')?.invalid && contactForm.get('name')?.errors?.['maxlength']){
-                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">This field is too long. Must be less than 100 characters.</span></p>
+                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">{{ 'CONTACTUS._fieldlong' | translate }}</span></p>
                 }
                 @if(contactForm.get('name')?.touched && contactForm.get('name')?.hasError('required')){
-                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">This field is mandatory.</span></p>
+                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">{{ 'CONTACTUS._mandatory' | translate }}</span></p>
                 }              
             </div>
             <div>
-                <label for="lastname" class="font-bold text-lg dark:text-white">Last name</label>
+                <label for="lastname" class="font-bold text-lg dark:text-white">{{ 'CONTACTUS._lastname' | translate }}</label>
                 <input formControlName="lastname" type="text" id="lastname"
                 [ngClass]="contactForm.get('lastname')?.touched && contactForm.get('lastname')?.invalid
                 ? 'border-red-600'
                 : 'border-gray-300 dark:border-secondary-200'"              
                 class="mb-2 bg-gray-50 dark:bg-secondary-300 border dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />        
                 @if(contactForm.get('lastname')?.invalid && contactForm.get('lastname')?.errors?.['maxlength']){
-                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">This field is too long. Must be less than 100 characters.</span></p>
+                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">{{ 'CONTACTUS._fieldlong' | translate }}</span></p>
                 }
                 @if(contactForm.get('lastname')?.touched && contactForm.get('lastname')?.hasError('required')){
-                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">This field is mandatory.</span></p>
+                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">{{ 'CONTACTUS._mandatory' | translate }}</span></p>
                 } 
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4">
             <div>
-                <label for="organization" class="font-bold text-lg dark:text-white">Organization</label>
+                <label for="organization" class="font-bold text-lg dark:text-white">{{ 'CONTACTUS._organization' | translate }}</label>
                 <input formControlName="organization" type="text" id="organization"
                 [ngClass]="contactForm.get('organization')?.touched && contactForm.get('organization')?.invalid
                 ? 'border-red-600'
                 : 'border-gray-300 dark:border-secondary-200'"  
                 class="mb-2 bg-gray-50 dark:bg-secondary-300 border dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />        
                 @if(contactForm.get('organization')?.invalid && contactForm.get('organization')?.errors?.['maxlength']){
-                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">This field is too long. Must be less than 100 characters.</span></p>
+                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">{{ 'CONTACTUS._mandatory' | translate }}</span></p>
                 }
                 @if(contactForm.get('organization')?.touched && contactForm.get('organization')?.hasError('required')){
-                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">This field is mandatory.</span></p>
+                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">{{ 'CONTACTUS._fieldlong' | translate }}</span></p>
                 } 
             </div>
             <div>
-                <label for="role" class="font-bold text-lg dark:text-white">Role in organization</label>
+                <label for="role" class="font-bold text-lg dark:text-white">{{ 'CONTACTUS._role' | translate }}</label>
                 <input formControlName="role" type="text" id="role"
                 [ngClass]="contactForm.get('role')?.touched && contactForm.get('role')?.invalid
                 ? 'border-red-600'
                 : 'border-gray-300 dark:border-secondary-200'"  
                 class="mb-2 bg-gray-50 dark:bg-secondary-300 border dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />        
                 @if(contactForm.get('role')?.invalid && contactForm.get('role')?.errors?.['maxlength']){
-                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">This field is too long. Must be less than 100 characters.</span></p>
+                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">{{ 'CONTACTUS._fieldlong' | translate }}</span></p>
                 }
                 @if(contactForm.get('role')?.touched && contactForm.get('role')?.hasError('required')){
-                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">This field is mandatory.</span></p>
+                    <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">{{ 'CONTACTUS._mandatory' | translate }}</span></p>
                 } 
             </div>
         </div>
         <div>
-            <label for="organization" class="font-bold text-lg dark:text-white">Message</label>
+            <label for="organization" class="font-bold text-lg dark:text-white">{{ 'CONTACTUS._message' | translate }}</label>
             <textarea id="editor" formControlName="message" rows="8" 
             [ngClass]="contactForm.get('message')?.touched && contactForm.get('message')?.invalid
             ? 'border-red-600'
             : 'border-gray-300 dark:border-secondary-200'"  
             class="block w-full min-h-fit rounded-lg px-2 text-sm text-gray-800 dark:text-gray-200 border bg-white dark:bg-secondary-300" placeholder="Add product description..." ></textarea>
             @if(contactForm.get('message')?.touched && contactForm.get('message')?.hasError('required')){
-                <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">This field is mandatory.</span></p>
+                <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">{{ 'CONTACTUS._mandatory' | translate }}</span></p>
             }
         </div>
         <p class="text-sm text-gray-500 dark:text-gray-200">
             <span class="font-medium">
-                <b>Information about the processing of personal data is as follows:</b>
+                <b>{{ 'CONTACTUS._info' | translate }}</b>
                 <a href="{{dataControllerDome}}" target="_blank" 
-                   class="cursor-pointer font-medium text-primary-100 dark:text-primary-50 hover:underline whitespace-nowrap"> Data Controller DOME</a>.
-                Purpose: to send you information about DOME’s project by electronic means. Legal basis: data subject’s consent. Recipients: The personal data collected will not be communicated to third parties, unless requested by public administrations or if required by law. 
-                Exercise of Rights: sending an email to 
+                   class="cursor-pointer font-medium text-primary-100 dark:text-primary-50 hover:underline whitespace-nowrap"> {{ 'CONTACTUS._controller' | translate }}</a>.
+                   {{ 'CONTACTUS._purpose' | translate }}
                 <a href="mailto:privacy.helpdesk@dome-project.eu" 
                    class="cursor-pointer font-medium text-primary-100 dark:text-primary-50 hover:underline whitespace-nowrap">privacy.helpdesk&#64;dome-project.eu</a>,
-                indicating in the subject line: "Exercise of rights". You are also entitled to be assisted by a Data Protection Authority. Find more information about personal data processing in
+                   {{ 'CONTACTUS._indicating' | translate }}
                 <a href="{{DPA}}" target="_blank" 
-                   class="cursor-pointer font-medium text-primary-100 dark:text-primary-50 hover:underline whitespace-nowrap">our here</a>.
+                   class="cursor-pointer font-medium text-primary-100 dark:text-primary-50 hover:underline whitespace-nowrap">{{ 'CONTACTUS._here' | translate }}</a>.
             </span>
         </p>
         
         <button type="submit" [disabled]="!contactForm.valid" [ngClass]="!contactForm.valid ? 'opacity-50 cursor-not-allowed' : 'cursor-pointer'" (click)="sendMail()" class="mt-4 py-2 px-3 text-sm font-medium text-center text-white bg-primary-100 hover:bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-primary-50">
-            Submit
+            {{ 'CONTACTUS._submit' | translate }}
         </button>       
 
     </form>
@@ -142,7 +141,7 @@
                 <div class="w-full mb-4 rounded-t-lg p-8">
                     
                     <fa-icon [icon]="faHandsHoldingHeart" class="text-5xl text-primary-50 align-middle mr-2"></fa-icon>
-                    <h5 class="md:text-3xl lg:text-4xl mt-2 font-semibold tracking-tight text-secondary-100 dark:text-white text-wrap break-all">Thank you for contacting DOME Marketplace.</h5>
+                    <h5 class="md:text-3xl lg:text-4xl mt-2 font-semibold tracking-tight text-secondary-100 dark:text-white text-wrap break-all">{{ 'CONTACTUS._thanks' | translate }}</h5>
     
                 </div>
         </div>
