--- a/src/app/pages/search-catalog/search-catalog.component.html
+++ b/src/app/pages/search-catalog/search-catalog.component.html
@@ -9,7 +9,7 @@
                 <svg class="w-3 h-3 mr-2 text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 12 10">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M5 1 1 5l4 4m6-8L7 5l4 4"/>
                 </svg>
-                All catalogues
+                {{ 'DASHBOARD._all_catalogs' | translate }}
               </button>
             </li>
             <li aria-current="page">
@@ -31,7 +31,7 @@
            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
            </svg>
-           <span class="sr-only">Close menu</span>
+           <span class="sr-only">{{ 'DASHBOARD._close_menu' | translate }}</span>
         </button>
         <bae-categories-filter [catalogId]="catalog.id"></bae-categories-filter>
       </div>
@@ -44,7 +44,7 @@
           <svg class="w-4 h-4 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
           </svg>
-          Categories
+          {{ 'DASHBOARD._categories_single' | translate }}
         </button>
         <!--@if(searchEnabled){
           <form class="mx-5 w-full">
