--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/create-product-spec/create-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/create-product-spec/create-product-spec.component.html
@@ -305,7 +305,7 @@
                 @if(showCompliance){
                     <h2 class="text-3xl font-bold text-primary-100 ml-4 dark:text-white">{{ 'CREATE_PROD_SPEC._comp_profile' | translate }}</h2>
                     <h3 class="font-bold text-primary-100 dark:text-primary-50 text-left ml-4">
-                        Self Attestation:
+                        {{ 'CREATE_PROD_SPEC._self_attestation' | translate }}
                     </h3>
                     <div class="flex items-center justify-between ml-4 border border-1 p-2 rounded-lg shadow bg-white dark:bg-secondary-200 shadow-md">
 
@@ -1579,15 +1579,15 @@
                     <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
                     </svg>
-                    <span class="sr-only">Close modal</span>
+                    <span class="sr-only">{{ 'CREATE_PROD_SPEC._close_modal' | translate }}</span>
                 </button>
                 <ngx-file-drop class="m-4 p-4" dropZoneLabel="Drop files here" (onFileDrop)="dropped($event,selectedISO)" (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
                     <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
                         <svg class="w-12 h-12 text-primary-100 mx-auto" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h3a3 3 0 0 0 0-6h-.025a5.56 5.56 0 0 0 .025-.5A5.5 5.5 0 0 0 7.207 9.021C7.137 9.017 7.071 9 7 9a4 4 0 1 0 0 8h2.167M12 19v-9m0 0-2 2m2-2 2 2"/>
                         </svg>                        
-                        <p class="text-gray-500 mr-4">Drop files to attatch or 
-                            <button (click)="openFileSelector()" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">select a file.</button>
+                        <p class="text-gray-500 mr-4">{{ 'CREATE_PROD_SPEC._drop_files' | translate }}
+                            <button (click)="openFileSelector()" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">{{ 'CREATE_PROD_SPEC._select_files' | translate }}</button>
                         </p>                       
                     </ng-template>
                 </ngx-file-drop>  
@@ -1595,10 +1595,10 @@
               
                 <div class="flex justify-center items-center space-x-4">
                     <button (click)="showUploadFile=false;$event.stopPropagation();" type="button" class="py-2 px-3 text-sm font-medium text-gray-500 bg-white rounded-lg border border-gray-200 hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-primary-300 hover:text-gray-900 focus:z-10">
-                        Cancel
+                        {{ 'CREATE_PROD_SPEC._cancel' | translate }}
                     </button>
                     <button (click)="uploadFile()" type="submit" class="py-2 px-3 text-sm font-medium text-center text-white bg-primary-100 hover:bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-primary-50">
-                        Upload
+                        {{ 'CREATE_PROD_SPEC._upload' | translate }}
                     </button>
                 </div>
             </div>
