--- a/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
@@ -32,7 +32,7 @@
                         class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
                 
                         <label for="acknowledged" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
-                        Acknowledged
+                        {{ 'PROFILE._acknowledged' | translate }}
                         </label>
                     </li>
                 
@@ -41,7 +41,7 @@
                         class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
                 
                         <label for="inProgress" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
-                        In Progress
+                        {{ 'PROFILE._in_progress' | translate }}
                         </label>
                     </li>
                 
@@ -50,7 +50,7 @@
                         class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
                 
                         <label for="completed" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
-                        Completed
+                        {{ 'PROFILE._completed' | translate }}
                         </label>
                     </li>
                 
@@ -59,7 +59,7 @@
                         class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
                 
                         <label for="failed" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
-                        Failed
+                        {{ 'PROFILE._failed' | translate }}
                         </label>
                     </li>
             
@@ -68,7 +68,7 @@
                         class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
                 
                         <label for="pending" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
-                        Pending
+                        {{ 'PROFILE._pending' | translate }}
                         </label>
                     </li>
             
@@ -77,7 +77,7 @@
                         class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
                 
                         <label for="cancelled" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
-                        Cancelled
+                        {{ 'PROFILE._cancelled' | translate }}
                         </label>
                     </li>
                 </ul>
@@ -132,10 +132,10 @@
                                     {{ 'PRODUCT_INVENTORY._bill' | translate }}
                                 </th>
                                 <th scope="col" class="px-6 py-3 text-center align-middle">
-                                    Date
+                                    {{ 'PROFILE._date' | translate }}
                                 </th>
                                 <th scope="col" class="text-center align-middle">
-                                    Actions 
+                                    {{ 'PROFILE._actions' | translate }} 
                                 </th>
                             </tr>
                         </thead>
@@ -220,7 +220,7 @@
         <div class="w-full md:w-3/4 lg:w-1/2 relative bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 rounded-lg shadow bg-cover bg-right-bottom" (click)="$event.stopPropagation();">
             <!-- Modal header -->
             <div class="flex items-center justify-between p-2 rounded-t dark:border-gray-600 shadow-lg">
-                <h2 class="md:text-3xl lg:text-4xl font-bold text-primary-100 ml-4 dark:text-white m-4">Order details:</h2>                
+                <h2 class="md:text-3xl lg:text-4xl font-bold text-primary-100 ml-4 dark:text-white m-4">{{ 'PROFILE._order_details' | translate }}</h2>                
                 <button (click)="showOrderDetails=false;" type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="delete-bill-modal">
                     <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
@@ -267,7 +267,7 @@
                     </div>
                     <div class="flex flex-row gap-2 pb-2 text-gray-600">
                         <p class="w-fit text-base font-bold shrink-0 dark:text-white">
-                            Billing address
+                            {{ 'PROFILE._billing_address' | translate }}
                         </p>
                         <h3 class="text-base dark:text-gray-200">
                             {{orderToShow.billingAccount.contact[0].contactMedium[1].characteristic.city}}, {{orderToShow.billingAccount.contact[0].contactMedium[1].characteristic.street1}}, {{orderToShow.billingAccount.contact[0].contactMedium[1].characteristic.country}} ({{orderToShow.billingAccount.name}})
@@ -275,7 +275,7 @@
                     </div>
                     <div class="flex flex-row gap-2 pb-2 text-gray-600">
                         <p class="w-fit text-base font-bold shrink-0 dark:text-white">
-                            Email
+                            {{ 'PROFILE._email' | translate }}
                         </p>
                         <h3 class="text-base dark:text-gray-200">
                             {{orderToShow.billingAccount.contact[0].contactMedium[0].characteristic.emailAddress}}
@@ -283,7 +283,7 @@
                     </div>
                     <div class="flex flex-row gap-2 pb-2 text-gray-600">
                         <p class="w-fit text-base font-bold shrink-0 dark:text-white">
-                            Date
+                            {{ 'PROFILE._date' | translate }}
                         </p>
                         <h3 class="text-base dark:text-gray-200">
                             {{orderToShow?.orderDate | date:'EEEE, dd/MM/yy, HH:mm'}}
@@ -293,13 +293,13 @@
                         <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-secondary-200 dark:text-white">
                             <tr>
                                 <th scope="col" class="px-6 py-3 text-center align-middle">
-                                    Img
+                                    {{ 'PROFILE._img' | translate }}
                                 </th>
                                 <th scope="col" class="px-6 py-3 text-center align-middle">
-                                    Name
+                                    {{ 'PROFILE._name' | translate }}
                                 </th>
                                 <th scope="col" class="px-6 py-3 text-center align-middle">
-                                    Price
+                                    {{ 'PROFILE._price' | translate }}
                                 </th>
                             </tr>
                         </thead>
@@ -315,7 +315,7 @@
                                     @if(item.productOfferingPrice){
                                         @if(item.productOfferingPrice.priceType == 'custom'){
                                             <td class="px-6 py-4 text-center align-middle">
-                                                Custom
+                                                {{ 'PROFILE._custom' | translate }}
                                             </td>
                                         } @else {
                                             <td class="px-6 py-4 text-center align-middle">
@@ -340,9 +340,9 @@
                                 <p class="flex block justify-end mr-2 text-sm text-gray-500 dark:text-gray-200">{{price.price}} {{price.unit}} {{price.text}}</p>
                              } @empty {
                                 @if(check_custom==true){
-                                    <p class="flex flex-right text-gray-700 justify-end text-gray-500 dark:text-gray-200">Custom</p>
+                                    <p class="flex flex-right text-gray-700 justify-end text-gray-500 dark:text-gray-200">{{ 'PROFILE._custom' | translate }}</p>
                                 } @else {
-                                    <p class="flex flex-right text-gray-700 justify-end text-gray-500 dark:text-gray-200">Free</p>
+                                    <p class="flex flex-right text-gray-700 justify-end text-gray-500 dark:text-gray-200">{{ 'PROFILE._free' | translate }}</p>
                                 }                                
                              }
                           </div>
