--- a/src/app/shared/categories-filter/categories-filter.component.html
+++ b/src/app/shared/categories-filter/categories-filter.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-2xl dark:text-secondary-50 p-2">Categories</h2>
+<h2 class="text-2xl dark:text-secondary-50 p-2">{{ 'CATEGORIES._categories' | translate }}</h2>
   <div id="accordion-collapse"  data-accordion="open" >
     @for(category of categories; track category.id; let idx = $index) {
     
