--- a/src/app/shared/forms/offer/price-plans/price-components-table/price-components-table.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-components-table/price-components-table.component.html
@@ -3,10 +3,10 @@
   <table class="w-full text-sm text-left text-gray-500 dark:text-gray-200">
     <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-300">
     <tr>
-      <th class="px-6 py-3">Name</th>
-      <th class="px-6 py-3">Description</th>
-      <th class="px-6 py-3">Price Type</th>
-      <th class="px-6 py-3 text-center">Actions</th>
+      <th class="px-6 py-3">{{ 'FORMS.PRICE_PLAN_COMPONENT._name' | translate }}</th>
+      <th class="px-6 py-3">{{ 'FORMS.PRICE_PLAN_COMPONENT._description' | translate }}</th>
+      <th class="px-6 py-3">{{ 'FORMS.PRICE_PLAN_COMPONENT._price_type' | translate }}</th>
+      <th class="px-6 py-3 text-center">{{ 'FORMS.PRICE_PLAN_COMPONENT._actions' | translate }}</th>
     </tr>
     </thead>
     <tbody>
@@ -68,11 +68,11 @@
 <!-- Modal de Confirmación de Eliminación -->
 <div *ngIf="showDeleteModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
   <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg">
-    <h2 class="text-lg font-semibold text-gray-700 dark:text-white">Are you sure you want to delete this Price Component?</h2>
-    <p class="text-gray-500 dark:text-gray-300">This action can't be undone.</p>
+    <h2 class="text-lg font-semibold text-gray-700 dark:text-white">{{ 'FORMS.PRICE_PLAN_COMPONENT._delete_price_comp' | translate }}</h2>
+    <p class="text-gray-500 dark:text-gray-300">{{ 'FORMS.PRICE_PLAN_COMPONENT._unable_undone' | translate }}</p>
     <div class="flex justify-end mt-4 space-x-3">
-      <button (click)="showDeleteModal = false" class="px-4 py-2 bg-gray-300 dark:bg-gray-600 rounded">Cancel</button>
-      <button (click)="deletePriceComponent()" class="px-4 py-2 bg-red-500 text-white rounded">Delete</button>
+      <button (click)="showDeleteModal = false" class="px-4 py-2 bg-gray-300 dark:bg-gray-600 rounded">{{ 'FORMS.PRICE_PLAN_COMPONENT._cancel' | translate }}</button>
+      <button (click)="deletePriceComponent()" class="px-4 py-2 bg-red-500 text-white rounded">{{ 'FORMS.PRICE_PLAN_COMPONENT._delete' | translate }}</button>
     </div>
   </div>
 </div>
