--- a/src/app/shared/forms/usage-spec/usage-spec.component.html
+++ b/src/app/shared/forms/usage-spec/usage-spec.component.html
@@ -1,11 +1,11 @@
 <div class="bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 mt-4 p-4 md:p-8 rounded-lg w-full">
     @if(formType === 'update'){
       <h2 class="text-3xl font-bold text-primary-100 dark:text-white pb-4">
-        Update Usage Spec
+        {{ 'USAGE_SPECS._update' | translate }}
       </h2>
     } @else {
       <h2 class="text-3xl font-bold text-primary-100 dark:text-white pb-4">
-        Create Usage Spec
+        {{ 'USAGE_SPECS._create' | translate }}
       </h2>
     }
   
@@ -76,7 +76,7 @@
                     d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3
                     256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/>
             </svg>
-          Previous step
+          {{ 'USAGE_SPECS._previous' | translate }}
         </button>
   
         <button (click)="goToStep(currentStep + 1)"
@@ -86,7 +86,7 @@
                   'cursor-not-allowed opacity-50': currentStep === steps.length - 1 || (formType === 'create' && !validateCurrentStep() || !canNavigate(currentStep))
                 }"
                 class="px-4 py-2 flex items-center justify-center text-base font-medium rounded-lg text-gray-500 bg-white border border-gray-300 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400">
-          Next step
+          {{ 'USAGE_SPECS._next' | translate }}
           <svg class="min-w-4 w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
             <path fill="currentColor"
                   d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7
